kustomization/overlays/experimental/7d2d-relic/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,websecure-ext
    traefik.ingress.kubernetes.io/router.middlewares: auth-forwardauth-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: seven-days-to-die-ingress
spec:
  rules:
    - host: 7d2d-relic-admin.tswn.us
      http:
        paths:
          - backend:
              service:
                name: seven-days-to-die-svc
                port:
                  name: web
            path: /
            pathType: Prefix
